--- a/src/general-components/NavbarTop/NavbarTop.css
+++ b/src/general-components/NavbarTop/NavbarTop.css
@@ -1,11 +1,12 @@
 .NavbarTop a{
+    margin: 0 .5em;
+    font-size: .85em;
     color: var(--white);
     text-decoration: none;
-    margin: 0 .5em;
 }
 .NavbarTop a.logo{
-    color: var(--bs-blue);
-    font-size: 1.3em;
-    font-weight: 700;
     margin: 0 .5em 0 0;
+    color: var(--white);
+    font-size: 1em;
+    font-weight: 700;
 }
