--- a/src/general-components/FooterBottom/FooterBottom.css
+++ b/src/general-components/FooterBottom/FooterBottom.css
@@ -1,14 +1,62 @@
 .FooterBottom{
     width: 100%;
-    min-height: 100px;
-    padding: 2.5em 0;
-    border-top: 3px solid var(--bs-blue);
+    padding: 5em 0;
+    border-top: 5px solid var(--bs-blue);
     background: var(--footer-bg);
+    color: var(--bs-white);
+    font-size: 13px;
+    font-weight: 300;
 }
 
 /*main container*/
 .FooterBottom .container{
     display: flex;
-    align-content: flex-start;
+    align-content: flex-end;
     justify-content: space-between;
 }
+
+/*container left with logo*/
+.FooterBottom .inner.left{
+    width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
+/*logo*/
+.FooterBottom .inner.left img{
+    width: 100px;
+}
+
+/*h6*/
+.FooterBottom h6{
+    font-weight: 600;
+}
+.FooterBottom .inner.left h6{
+    margin: 1.5em 0 .5em;
+}
+
+/*links*/
+.FooterBottom a{
+    color: inherit;
+    text-decoration: none;
+    transition: .25s;
+    opacity: .75;
+}
+.FooterBottom a:hover{
+    color: var(--bs-blue);
+    opacity: 1;
+}
+
+/*ul*/
+.FooterBottom .container ul{
+    list-style: none;
+    padding-left: 0;
+}
+.FooterBottom .container ul li{
+    padding: .25em 0;
+}
+.FooterBottom .container ul li:last-child{
+    padding-bottom: 0;
+}
+
+
