add BreadCrumbs.jsx, more redacts in ProductPage.jsx and inner components

--- a/src/general-components/NavbarCategories/NavbarCategories.css
+++ b/src/general-components/NavbarCategories/NavbarCategories.css
@@ -1,6 +1,7 @@
 .NavbarCategories button{
-    width: calc(160px - .25em);
+    width: calc(200px - .5em);
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 13px;
 }
