--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,10 +23,11 @@
     --bs-red: #DB2836;
 
     --def-border-redius: 5px;
-    --def-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+    --def-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
 body{
+    /*background: #F0F0F0;*/
     color: var(--bs-dark);
 }
 
