add getReviewsGrade.js, redact UserProfile.jsx and UserDataNavigate.jsx

--- a/src/general-components/MessageAlert/MessageAlert.css
+++ b/src/general-components/MessageAlert/MessageAlert.css
@@ -1,6 +1,6 @@
 .MessageAlert{
     max-width: 50%;
-    position: absolute;
-    top: 5px;
-    right: 0;
+    position: fixed;
+    top: 10px;
+    right: 10px;
 }
