--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,6 +21,7 @@
     --bs-green: #90D23E;
     --bs-green-hover: #6f9f34;
     --bs-red: #DB2836;
+    --bs-red-hover: #b71a26;
 
     --def-border-redius: 5px;
     --def-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
