add AddUserData.css, BriefcasePage.jsx, Login.css, titles.css

--- a/src/general-components/CardProduct/CardProductSwiper/CardProductSwiper.css
+++ b/src/general-components/CardProduct/CardProductSwiper/CardProductSwiper.css
@@ -33,3 +33,9 @@
     background: var(--bs-blue);
     opacity: 1;
 }
+
+.CardProductSwiper.wait{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
