add new categories redact RedactCategoryButton.jsx, NavbarCategoriesOffcanvas.jsx, ListItemCategory.jsx and some small redacts in other files

--- a/src/general-components/Auth/Login/Login.css
+++ b/src/general-components/Auth/Login/Login.css
@@ -22,8 +22,11 @@
 .Login .PhoneInput-container,
 .Login input.code{
     color: var(--bs-dark);
-    padding: .75em;
+    padding: .25em;
+    text-align: center;
     border: 2px solid #F2F2F2;
+    font-size: 2em;
+    font-weight: 800;
     border-radius: var(--def-border-redius);
     box-shadow: 15px 15px 35px rgba(112, 124, 151, 0.05);
     transition: .25s;
