--- a/src/general-components/NavbarCategories/NavbarCategories.css
+++ b/src/general-components/NavbarCategories/NavbarCategories.css
@@ -9,3 +9,76 @@
     width: 25px;
     margin-right: 5px;
 }
+
+
+/*NavbarCategoriesOffcanvas*/
+
+.offcanvas{
+    width: auto;
+    min-width: 500px;
+}
+.offcanvas .offcanvas-body{
+    padding: 0;
+}
+
+    /*conatiner*/
+.NavbarCategoriesOffcanvas .content{
+    width: 100%;
+    display: flex;
+}
+
+.NavbarCategoriesOffcanvas .left,
+.NavbarCategoriesOffcanvas .right{
+    width: 50% !important;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.NavbarCategoriesOffcanvas .right{
+    border-left: 1px solid rgba(73, 73, 73, 0.25);
+}
+.NavbarCategoriesOffcanvas .left button{
+    margin: .25em 0;
+    display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    white-space: nowrap;
+    transition: .25s;
+}
+.NavbarCategoriesOffcanvas .left button img{
+    width: 30px;
+    margin-right: 10px;
+    transition: .25s;
+}
+.NavbarCategoriesOffcanvas .left button:hover{
+    opacity: .5;
+}
+.NavbarCategoriesOffcanvas .left button:hover img{
+    margin-right: 5px;
+}
+
+/*p no subcategories*/
+.NavbarCategoriesOffcanvas .cont-noSubcateg{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.NavbarCategoriesOffcanvas .cont-noSubcateg p{
+    width: 100%;
+    text-align: center;
+    opacity: .5;
+}
+
+/*right*/
+.NavbarCategoriesOffcanvas .right a{
+    margin: .55em 0;
+    text-decoration: none;
+    color: var(--bs-dark);
+    transition: .25s;
+}
+.NavbarCategoriesOffcanvas .right a:hover{
+    color: var(--bs-blue);
+}
