--- a/src/pages/ProductPage/components/ProductInfoTabs/ProductInfoTabs.css
+++ b/src/pages/ProductPage/components/ProductInfoTabs/ProductInfoTabs.css
@@ -22,9 +22,9 @@
 /*inner block*/
 .ProductInfoTabs .inner p{
     font-size: 16px !important;
-    margin: 0;
+    margin: 1em 0 0 0;
 }
 .ProductInfoTabs .inner p span{
+    font-size: 1.1em;
     font-weight: 600;
-    margin-right: .25em;
 }
