--- a/src/pages/ProductPage/components/ProductUserData/ProductUserData.css
+++ b/src/pages/ProductPage/components/ProductUserData/ProductUserData.css
@@ -19,6 +19,7 @@
     text-decoration: none;
     transition: .25s;
 }
+.ProductUserData a,
 .ProductUserData a:hover{
     color: var(--bs-blue);
 }
