--- a/src/general-components/CardProduct/CardProduct.css
+++ b/src/general-components/CardProduct/CardProduct.css
@@ -1,6 +1,6 @@
 .CardProduct{
     width: calc(33.3% - 1em);
-    margin: 0 1em 1em 0;
+    margin: 0 0 1em 0;
     border-radius: var(--def-border-redius);
     box-shadow: var(--def-shadow);
 }
