--- a/src/pages/SubProductsPage/SubProductSort/SubProductSort.css
+++ b/src/pages/SubProductsPage/SubProductSort/SubProductSort.css
@@ -1,21 +1,26 @@
 .SubProductSort button{
-    background: none;
+    background: var(--bs-light);
     color: var(--bs-dark);
+    font-size: 15px !important;
     font-weight: 500;
     border: none;
 }
 .SubProductSort button:hover{
     color: var(--bs-dark) !important;
-    background: var(--bs-light) !important;
+    background: var(--bs-dark-op-25) !important;
 }
 .SubProductSort button{
     display: flex;
     align-items: center;
 }
 .SubProductSort button img{
-    height: 15px;
-    margin-right: 3px;
+    height: 17px;
+    margin-right: 5px;
 }
 .SubProductSort button::after{
     display: none;
+}
+
+.SubProductSort .dropdown-item{
+    color: var(--bs-dark);
 }
