--- a/src/pages/SubcategoriesPage/SubcategoriesPage.css
+++ b/src/pages/SubcategoriesPage/SubcategoriesPage.css
@@ -19,7 +19,7 @@
 /*container for products*/
 .SubcategoriesPage .sub-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 
