--- a/src/pages/ProductPage/components/ProductSimilarProducts/ProductSimilarProducts.css
+++ b/src/pages/ProductPage/components/ProductSimilarProducts/ProductSimilarProducts.css
@@ -1,9 +1,5 @@
 .ProductSimilarProducts{
-    margin: 4em 0;
-}
-.ProductSimilarProducts h2{
-    margin-bottom: .75em;
-    font-weight: 400;
+    margin: 3em 0 2em;
 }
 
 /*container for products*/
