--- a/src/general-components/Auth/UserProfile/components/RedactUserProduct/RedactUserProduct.css
+++ b/src/general-components/Auth/UserProfile/components/RedactUserProduct/RedactUserProduct.css
@@ -10,8 +10,9 @@
 
 /*p warning*/
 .RedactUserProduct p.warning{
+    width: 75%;
     opacity: .5;
-    margin: 2em 0 0 0;
+    margin: 1.5em 0 0 0;
 }
 
 /*form*/
