--- a/src/pages/PostProductPage/PostProductPage.css
+++ b/src/pages/PostProductPage/PostProductPage.css
@@ -2,6 +2,13 @@
     padding-top: 2em;
     padding-bottom: 2em;
 }
+.PostProductPage h3.title{
+    margin-bottom: .25em;
+}
+.PostProductPage p.small.warning{
+    margin-bottom: 2em;
+    opacity: .5;
+}
 
 /*no-user-data text*/
 .PostProductPage .no-user-data{
