--- a/src/static-components/CryptoAdv/CryptoAdv.css
+++ b/src/static-components/CryptoAdv/CryptoAdv.css
@@ -33,7 +33,7 @@
     margin: 0;
 }
 .CryptoAdv .content p a{
-    color: var(--bs-blue);
+    color: inherit;
     font-weight: 600;
     margin-left: .25em;
 }
@@ -43,7 +43,7 @@
     margin-top: 1em;
 }
 .CryptoAdv .content footer p.small{
-    margin-top: 3em;
+    margin-top: 1em;
     font-size: 12px !important;
     line-height: 1;
     opacity: .5;
