--- a/src/general-components/SliderNews/SliderNews.css
+++ b/src/general-components/SliderNews/SliderNews.css
@@ -2,9 +2,71 @@
     margin: 1.25em 0 3em;
 }
 .SliderNews .swiper-slide{
-    height: 150px;
+    position: relative;
+    height: 180px;
+    padding: 1.5em;
+    border-radius: var(--def-border-redius);
+    box-shadow: var(--def-shadow);
     background: var(--bs-light);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    cursor: pointer;
+    transition: .25s;
+}
+.SliderNews .swiper-slide:hover{
+    opacity: .75;
+}
+
+/*img in card*/
+.SliderNews .swiper-slide .static-img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+}
+
+/*link to articles page*/
+.SliderNews .swiper-slide a{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+}
+
+/*content text*/
+.SliderNews .swiper-slide .content{
+    width: 70%;
+}
+.SliderNews .swiper-slide .content h5{
+    font-weight: 600;
+    margin-bottom: .15em;
+}
+
+/*next/prev slide buttons*/
+.SliderNews .swiper-button-prev,
+.SliderNews .swiper-button-next{
+    width: 26px;
+    height: 26px;
+    margin-top: -13px;
+    border-radius: var(--def-border-redius);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    background: #F8F8F8;
+    left: 5px;
+    transition: .25s;
+}
+/*hover*/
+.SliderNews .swiper-button-prev:hover,
+.SliderNews .swiper-button-next:hover{
+    width: 32px;
+}
+
+.SliderNews .swiper-button-next{
+    right: 5px;
+    left: auto;
+}
+.SliderNews .swiper-button-prev:after,
+.SliderNews .swiper-button-next:after{
+    color: var(--bs-dark);
+    font-size: 13px;
 }
