add DeliveryPage.jsx, SellerCommPage.jsx, ProductsReturnsPage.jsx, PayRefundPage.jsx, redact UserPage.jsx and ProductHeader.jsx

--- a/src/pages/ProductPage/components/ProductUserData/ProductUserData.css
+++ b/src/pages/ProductPage/components/ProductUserData/ProductUserData.css
@@ -1,4 +1,5 @@
 .ProductUserData{
+    margin-top: 1em;
     padding: 2em;
     border-radius: var(--def-border-redius);
     box-shadow: var(--def-shadow);
