--- a/src/pages/UserPage/components/UserContacts/UserContacts.css
+++ b/src/pages/UserPage/components/UserContacts/UserContacts.css
@@ -65,3 +65,9 @@
 .UserContacts .def-block p.small{
     font-weight: 300;
 }
+
+/*p opacity*/
+.UserContacts p.warning{
+    opacity: .5;
+    margin: 0;
+}
