--- a/src/pages/ProductPage/components/ProductInfoTabs/ProductInfoTabs.css
+++ b/src/pages/ProductPage/components/ProductInfoTabs/ProductInfoTabs.css
@@ -7,9 +7,10 @@
     font-size: 20px !important;
     font-weight: 500;
     transition: .25s;
+    opacity: .5;
 }
 .ProductInfoTabs header button:disabled{
-    opacity: .5;
+    opacity: 1;
     cursor: default;
 }
 .ProductInfoTabs header button:disabled:hover{
