redact FooterBottom.jsx, CryptoAdv.jsx and PrivacyPolicyPage.jsx

--- a/src/pages/SubProductsPage/SubProductsPage.css
+++ b/src/pages/SubProductsPage/SubProductsPage.css
@@ -1,3 +1,7 @@
+.SubProductsPage{
+    padding-bottom: 4em;
+}
+/*header*/
 .SubProductsPage header{
     display: flex;
     flex-direction: column;
