--- a/src/static-components/CryptoAdv/CryptoAdv.css
+++ b/src/static-components/CryptoAdv/CryptoAdv.css
@@ -1,9 +1,9 @@
 .CryptoAdv{
+    position: relative;
     width: 100%;
     margin: 4em 0;
-    padding: 2em;
-    background: var(--bs-light);
-    /*box-shadow: var(--def-shadow);*/
+    padding: 4em 2em;
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
     border: 2px solid #F5F4FB;
     border-radius: var(--def-border-redius);
 
@@ -16,35 +16,42 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right center;
+    overflow: hidden;
+}
+
+/*img logo absolute*/
+.CryptoAdv img.logo{
+    width: 20%;
+    position: absolute;
+    right: -2%;
+    top: 10%;
 }
 
 /*content*/
 .CryptoAdv .content{
-    width: 65%;
+    width: 75%;
 }
 
 /*text*/
-.CryptoAdv .content h4{
+.CryptoAdv .content h3{
     font-weight: 500;
-    margin: 0;
+    margin: 0 0 .25em;
 }
-.CryptoAdv .content p{
-    opacity: .75;
-    margin: 0;
-}
-.CryptoAdv .content p a{
-    color: inherit;
-    font-weight: 600;
+.CryptoAdv .content h3 b{
+    font-weight: 800;
     margin-left: .25em;
+}
+.CryptoAdv .content h3 b span{
+    color: var(--bs-blue);
+}
+
+.CryptoAdv .content h6{
+    font-weight: 300;
+    opacity: .75;
+    margin: 0 0 2em 0;
 }
 
 /*button*/
-.CryptoAdv .content footer{
-    margin-top: 1em;
-}
-.CryptoAdv .content footer p.small{
-    margin-top: 1em;
-    font-size: 12px !important;
-    line-height: 1;
-    opacity: .5;
+.CryptoAdv .but-blue{
+    padding: .75em 10%;
 }
