redact WebsiteRulesPage.jsx

--- a/src/general-components/SliderNews/SliderNews.css
+++ b/src/general-components/SliderNews/SliderNews.css
@@ -68,5 +68,6 @@
 .SliderNews .swiper-button-prev:after,
 .SliderNews .swiper-button-next:after{
     color: var(--bs-dark);
-    font-size: 13px;
+    font-size: 14px;
+    font-weight: 900;
 }
