--- a/src/static-components/TopSubcateg/TopSubcateg.css
+++ b/src/static-components/TopSubcateg/TopSubcateg.css
@@ -1,6 +1,6 @@
 .TopSubcateg{
     width: 100%;
-    margin: 1em 0 4em 0;
+    margin-bottom: 4em;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
