add media styles

--- a/src/pages/ProductPage/components/ProductHeader/ProductHeader.css
+++ b/src/pages/ProductPage/components/ProductHeader/ProductHeader.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
+    flex-wrap: wrap;
 }
 
 /*container for slider*/
