--- a/src/styles/components/text.css
+++ b/src/styles/components/text.css
@@ -3,7 +3,31 @@ p,a,button{
     font-size: 14px !important;
 }
 
+@media (max-width: 1200px){
+    h1 {
+        font-size: calc(1.1rem + 1.25vw);
+    }
+    h2 {
+        font-size: calc(1.1rem + .75vw);
+    }
+}
+
+@media (max-width: 991px){
+    h1 {
+        font-size: calc(1.1rem + 1.15vw);
+    }
+    h2 {
+        font-size: calc(1.1rem + .65vw);
+    }
+}
+
 @media (max-width: 768px){
+    h1 {
+        font-size: calc(1.1rem + 1vw);
+    }
+    h2 {
+        font-size: calc(1.1rem + .45vw);
+    }
     p,a,button{
         font-size: 13px !important;
     }
