--- a/src/pages/ProductPage/ProductPageMedia.css
+++ b/src/pages/ProductPage/ProductPageMedia.css
@@ -11,3 +11,9 @@
         border-radius: 0;
     }
 }
+
+@media (max-width: 469px) {
+    .ProductPage .GeneralSearch{
+        display: none;
+    }
+}
