--- a/src/general-components/Auth/UserProfile/components/AuthUserProducts/AuthUserProductsCard/AuthUserProductsCard.css
+++ b/src/general-components/Auth/UserProfile/components/AuthUserProducts/AuthUserProductsCard/AuthUserProductsCard.css
@@ -9,8 +9,8 @@
 }
 
 /*left block for content*/
-.AuthUserProductsCard .left{
-    width: 85% !important;
+.AuthUserProductsCard .left-card{
+    width: 85%;
     height: 100%;
     padding: 0 !important;
     display: flex;
@@ -18,40 +18,40 @@
     border-radius: var(--def-border-redius) !important;
 }
 /*slider*/
-.AuthUserProductsCard .left .slider-container{
+.AuthUserProductsCard .left-card .slider-container{
     width: 40%;
-    height: inherit;
+    height: 100%;
 }
 
 /*content in left block container*/
-.AuthUserProductsCard .left .content{
+.AuthUserProductsCard .left-card .content{
     padding: 1.5em;
 }
 /*text*/
-.AuthUserProductsCard .left .content p.center{
+.AuthUserProductsCard .left-card .content p.center{
     margin: 1em 0;
     line-height: 1.2;
 }
-.AuthUserProductsCard .left .content h4{
+.AuthUserProductsCard .left-card .content h4{
     font-weight: 700;
 }
-.AuthUserProductsCard .left .content p.min-order{
+.AuthUserProductsCard .left-card .content p.min-order{
     color: var(--bs-blue);
     text-decoration: underline;
 }
 
 /*right block for buttons*/
-.AuthUserProductsCard .right{
-    width: calc(100% - 85% - 1em) !important;
-    margin: 0 !important;
-    padding: 0 !important;
+.AuthUserProductsCard .right-card{
+    width: calc(100% - 85% - 1em);
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
 }
 
 /*line*/
 
-.AuthUserProductsCard .right .line{
+.AuthUserProductsCard .right-card .line{
     width: 75%;
     height: 1px;
     margin: 1em auto;
@@ -59,6 +59,6 @@
     opacity: .25;
 }
 
-.AuthUserProductsCard .right a{
+.AuthUserProductsCard .right-card a{
     margin: .25em 0;
 }
