--- a/src/general-components/NavbarTop/NavbarTopMedia.css
+++ b/src/general-components/NavbarTop/NavbarTopMedia.css
@@ -19,7 +19,7 @@
         font-size: 16px;
     }
     /*post product button*/
-    .NavbarTop a.post-product{
+    .NavbarTop .post-product{
         margin-left: 0;
     }
 }
