--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,7 +21,9 @@
     --bs-dark-op-25: rgba(73, 73, 73, 0.25);
     --bs-dark-op-1: rgba(73, 73, 73, 0.1);
     --bs-dark-hover: #1c1c1c;
-    --bs-light: #f6f6f6;
+    --bs-light: #F5F4FB;
+    --bs-light-op-50: rgba(245, 244, 251, 0.5);
+    --bs-light-op-25: rgba(245, 244, 251, 0.25);
     --bs-green: #90D23E;
     --bs-green-hover: #6f9f34;
     --bs-red: #DB2836;
